tests/v05-vertical-slice/accept/string_return.hew
fn main() -> String {
  let s = "hello";
  return s;
}
