tests/v05-vertical-slice/reject/use_after_consume.hew
fn main() -> String {
  let s = "hello";
  let t = s;
  return s;
}
